Archive2/31/9f72cf45339453/output
main.cpp: In function 'int main()':
main.cpp:15:48: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = std::basic_string<char>; _Dp = std::default_delete<std::basic_string<char> >]'
     std::unique_ptr<std::string> y(std::move(x));
                                                ^
In file included from /usr/local/include/c++/4.9.2/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
